# my-warehouse

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
warehouse_management/: app.py  db.py  pack_data.py  validator.py
warehouse_management/templates/: 404.html  500.html  base.html  create_product.html  home.html  products.html  show.html  update_product.html
warehouse_management/templates/orders/: create_order.html  details_order.html  orders.html  update_status.html
warehouse_management/templates/products/: delete_product.html  details_product.html  products.html
